<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logInLogo"
            android:layout_width="@dimen/dimen_p_100"
            android:layout_height="@dimen/dimen_p_50"
            android:layout_marginTop="@dimen/dimen_p_100"
            android:src="@drawable/ic_picnat_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.picnat.core_components.view.edit_text.EditTextWithTitle
            android:id="@+id/authSignUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_100"
            app:EditTextWithTitle_Hint="@string/auth_username"
            app:EditTextWithTitle_InputType="text"
            app:layout_constraintTop_toBottomOf="@id/logInLogo" />

        <com.picnat.core_components.view.edit_text.EditTextWithTitle
            android:id="@+id/authSignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_30"
            app:EditTextWithTitle_Hint="@string/auth_first_name"
            app:EditTextWithTitle_InputType="text"
            app:layout_constraintTop_toBottomOf="@id/authSignUpUsername" />

        <com.picnat.core_components.view.edit_text.EditTextWithTitle
            android:id="@+id/authSignUpLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_30"
            app:EditTextWithTitle_Hint="@string/auth_last_name"
            app:EditTextWithTitle_InputType="text"
            app:layout_constraintTop_toBottomOf="@id/authSignUpName" />

        <com.picnat.core_components.view.button.RoundedButton
            android:id="@+id/authSignUpInfoButton"
            android:layout_width="@dimen/dimen_p_150"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_p_50"
            app:RoundedButton_Color="@color/black"
            app:RoundedButton_Text="@string/auth_sign_up"
            app:RoundedButton_TextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authSignUpLastName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>